// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HealthIndicator proxy status section renders the degraded workloads 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1rbchbg"
  content={
    <div>
      <strong>
        Degraded
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "backendStatus": {
              "status": "Degraded",
            },
            "health": {
              "items": [
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-degraded",
                        "color": "var(--pf-t--global--icon--color--status--warning--default)",
                        "icon": [Function],
                        "id": "Degraded",
                        "name": "Degraded",
                        "priority": 3,
                        "status": "warning",
                      },
                      "text": "A: 2 / 2 (1 proxy unsynced)",
                    },
                  ],
                  "status": {
                    "className": "icon-degraded",
                    "color": "var(--pf-t--global--icon--color--status--warning--default)",
                    "icon": [Function],
                    "id": "Degraded",
                    "name": "Degraded",
                    "priority": 3,
                    "status": "warning",
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "id": "NA",
                        "name": "n/a",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "id": "NA",
                        "name": "n/a",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": {
                    "className": "icon-na",
                    "color": "var(--pf-t--color--gray--50)",
                    "icon": [Function],
                    "id": "NA",
                    "name": "n/a",
                    "priority": 0,
                    "status": "custom",
                  },
                  "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": {
                "status": {
                  "className": "icon-na",
                  "color": "var(--pf-t--color--gray--50)",
                  "icon": [Function],
                  "id": "NA",
                  "name": "n/a",
                  "priority": 0,
                  "status": "custom",
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                "value": -1,
              },
            },
            "requests": {
              "healthAnnotations": {},
              "inbound": {},
              "outbound": {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-degraded kiali_f1cbc381"
      status="warning"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </span>
</Tooltip>
`;

exports[`HealthIndicator renders healthy 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1rbchbg"
  content={
    <div>
      <strong>
        Healthy
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "backendStatus": {
              "status": "Healthy",
            },
            "health": {
              "items": [
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--icon--color--status--success--default)",
                        "icon": [Function],
                        "id": "Healthy",
                        "name": "Healthy",
                        "priority": 1,
                        "status": "success",
                      },
                      "text": "A: 1 / 1",
                    },
                    {
                      "status": {
                        "className": "icon-healthy",
                        "color": "var(--pf-t--global--icon--color--status--success--default)",
                        "icon": [Function],
                        "id": "Healthy",
                        "name": "Healthy",
                        "priority": 1,
                        "status": "success",
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": {
                    "className": "icon-healthy",
                    "color": "var(--pf-t--global--icon--color--status--success--default)",
                    "icon": [Function],
                    "id": "Healthy",
                    "name": "Healthy",
                    "priority": 1,
                    "status": "success",
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                {
                  "children": [
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "id": "NA",
                        "name": "n/a",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    {
                      "status": {
                        "className": "icon-na",
                        "color": "var(--pf-t--color--gray--50)",
                        "icon": [Function],
                        "id": "NA",
                        "name": "n/a",
                        "priority": 0,
                        "status": "custom",
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": {
                    "className": "icon-na",
                    "color": "var(--pf-t--color--gray--50)",
                    "icon": [Function],
                    "id": "NA",
                    "name": "n/a",
                    "priority": 0,
                    "status": "custom",
                  },
                  "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": {
                "status": {
                  "className": "icon-na",
                  "color": "var(--pf-t--color--gray--50)",
                  "icon": [Function],
                  "id": "NA",
                  "name": "n/a",
                  "priority": 0,
                  "status": "custom",
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {"duration":"10m"}",
                "value": -1,
              },
            },
            "requests": {
              "healthAnnotations": {},
              "inbound": {},
              "outbound": {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-healthy kiali_f1wrxx94"
      status="success"
    >
      <CheckCircleIcon />
    </Icon>
  </span>
</Tooltip>
`;
